Company Org/src/objects/Hr_Report__c.object
<CustomObject>
    <fields>
        <fullName>From_Date__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Report_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Report Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <label>Hr Report</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Hr Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hr Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>